--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-recipes-spa",
-  "homepage": "https://sergeymelekh95.github.io/react-recipes-spa",
+  "homepage": "https://sergeymelekh95.github.io/react-recipes-spa/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
